--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">app_design</string>
+    <string name="app_name">App Design</string>
     <string name="dashboard">Dashboard</string>
     <string name="gastronomia">Gastronomía</string>
     <string name="turismo">Turismo</string>
     <string name="saludmedicina">Salud y Medicina</string>
     <string name="finanzas">Finanzas</string>
     <string name="comercio">Ecommerce</string>
+    <string name="arte">Arte y Creatividad</string>
+    <string name="eventos">Eventos</string>
 </resources>
